# grps

./: .gitignore  README.md  grps_client_env.sh  grps_client_install.sh  grps_env.sh  grps_install.sh
.github/workflows/: docker-image.yml
apis/grps_apis/: .gitignore  grps.proto  java_install.sh  pom.xml
apis/grps_apis/cpp_gens/: grps.grpc.pb.cc  grps.grpc.pb.h  grps.pb.cc
apis/grps_apis/python_gens/: grps_apis-1.1.0-py3-none-any.whl  setup.py
docker/: Dockerfile.grps1.1.0_cuda10.1_cudnn7.6.5_tf2.3.0_torch1.8.1_py3.7  Dockerfile.grps1.1.0_cuda10.1_cudnn7.6.5_tf2.3.0_torch1.8.1_py3.8  Dockerfile.grps1.1.0_cuda11.3_cudnn8.2_trt7.2.3_py3.8  Dockerfile.grps1.1.0_cuda11.8_cudnn8.6_tf2.12.0_torch2.1.2_py3.10  Dockerfile.grps1.1.0_cuda11.8_cudnn8.6_tf2.12.0_torch2.1.2_py3.8  Dockerfile.grps1.1.0_cuda11.8_cudnn8.6_torch2.4.0_py3.10  Dockerfile.grps1.1.0_cuda11.8_cudnn8.6_vllm0.4.3_py3.10  Dockerfile.grps1.1.0_cuda11.8_cudnn8.6_vllm0.5.5_py3.10  Dockerfile.grps1.1.0_cuda12.1_cudnn8.9_torch2.5.1_py3.10  Dockerfile.grps1.1.0_cuda12.1_cudnn8.9_trt8.6.1_py3.8  Dockerfile.grps1.1.0_cuda12.4_cudnn8.9_trtllm0.10.0_py3.10  Dockerfile.grps1.1.0_cuda12.4_cudnn9.1_trt8.6.3_py3.10  Dockerfile.grps1.1.0_cuda12.4_cudnn9.1_trtllm0.11.0_py3.10  Dockerfile.grps1.1.0_cuda12.5_cudnn9.2_trtllm0.12.0_py3.10  Dockerfile.grps1.1.0_cuda12.6_cudnn9.6_trtllm0.16.0_py3.12  Dockerfile.grps_client1.1.0  README.md  archive.sh
docs/: 10_Monitor.md  11_CustomizedHttp.md  12_Streaming.md  13_Batching.md  14_MultiModels.md  15_ServiceLimit.md  16_DockerDeploy.md  17_BuildFromSources.md  18_RemoteDev.md  19_ImageList.md  1_QuickStart.md  20_TrtMultiStream.md  2_Interface.md  3_Grpst.md  4_QuickDeploy.md  5_Customized.md  6_InternalConverter.md  7_InternalInferer.md  8_Client.md  90_FAQ.md  97_DlpDevelop.md  98_HorizonDeploy.md  9_Logger.md
grpst/: .gitignore  README.md  const.py  grpst-completion-bash.sh  grpst-completion-fish.sh  grpst.py  install.sh
grpst/archive/: archive.py
grpst/common/: __init__.py  utils.py
grpst/create/: create.py
grpst/deploy/: __init__.py  deploy.py
grpst/logs/: __init__.py  logs.py
grpst/ps/: ps.py
grpst/quick_deploy/: __init__.py  quick_serve.py
grpst/stop/: __init__.py  stop.py
server/cpp_server/: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  start_server.sh  stop_server.sh
server/cpp_server/conf/: gflags.conf  inference.yml  server.yml
server/cpp_server/second_party/: grps_apis
server/cpp_server/second_party/grps_apis/: CMakeLists.txt  README.md  cpp_install.sh  grps.brpc.proto  py_install.sh
server/cpp_server/second_party/grps_apis/cpp_gens/: grps.brpc.pb.cc  grps.brpc.pb.h  grps.pb.h
server/cpp_server/second_party/grps_apis/java_gens/io/grps/protos/: GrpsServiceGrpc.java
server/cpp_server/second_party/grps_apis/python_gens/: grps_apis-1.1.0-py3-none-any.whl
server/cpp_server/second_party/grps_apis/python_gens/grps_apis/: __init__.py
server/cpp_server/src/: CMakeLists.txt  constant.h  main.cc
server/cpp_server/src/batching/: batcher.cc  batcher.h
server/cpp_server/src/common/: global_gflags.cc  global_gflags.h  pb_utils.h
server/cpp_server/src/config/: global_config.cc  global_config.h
server/cpp_server/src/context/: context.cc  context.h
server/cpp_server/src/converter/: converter.cc  converter.h  tf_tensor_converter.cc  tf_tensor_converter.h  torch_tensor_converter.cc  torch_tensor_converter.h  trt_tensor_converter.cc  trt_tensor_converter.h
server/cpp_server/src/customized/: grps_server_customized.cc  grps_server_customized.h
server/cpp_server/src/dag/: dag.cc  dag.h  node.cc
server/cpp_server/src/executor/: executor.cc
server/cpp_server/src/handler/: grps_handler.cc  grps_handler.h
server/cpp_server/src/logger/: logger.cc
server/cpp_server/src/mem_manager/: tf_gpu_mem_mgr.cc  tf_gpu_mem_mgr.h  torch_gpu_mem_mgr.cc  torch_gpu_mem_mgr.h
server/cpp_server/src/model_infer/: inferer.cc  tf_inferer.cc  tf_inferer.h  torch_inferer.cc  torch_inferer.h  trt_cuda.h  trt_inferer.cc  trt_inferer.h
server/cpp_server/src/monitor/: monitor.cc  monitor.h
server/cpp_server/src/outlier/: outlier.h
server/cpp_server/src/service/: grps_service.cc  grps_service.h  js_service.cc  js_service.h  monitor_service.cc  monitor_service.h
server/cpp_server/src/system_monitor/: system_monitor.cc  system_monitor.h
server/cpp_server/test/: CMakeLists.txt
server/cpp_server/test/src/: grps_brpc_client.cc  grps_grpc_client.cc  monitor_test.cc
server/py_server/: .gitignore  README.md  requirements.txt  setup.py  start_server.sh  stop_server.sh
server/py_server/conf/: gunicorn.conf.py  inference.yml  server.yml
template/cpp_template/: .gitignore  CMakeLists.txt  README.md  build.sh
template/cpp_template/client/cpp/: CMakeLists.txt  brpc_client.cc  build.sh
template/cpp_template/client/java/: pom.xml
template/cpp_template/client/python/: grpc_client.py  http_client.py
template/cpp_template/docker/: Dockerfile
template/cpp_template/second_party/grps-server-framework/include/config/: global_config.h
template/cpp_template/second_party/grps-server-framework/include/context/: context.h
template/cpp_template/second_party/grps-server-framework/include/dag/: node.h
template/cpp_template/second_party/grps-server-framework/include/executor/: executor.h
template/cpp_template/second_party/grps-server-framework/include/logger/: logger.h
template/cpp_template/second_party/grps-server-framework/include/mem_manager/: gpu_mem_mgr.h
template/cpp_template/second_party/grps-server-framework/include/model/: model.h
template/cpp_template/second_party/grps-server-framework/include/model_infer/: cuda_helper.h  inferer.h  tensor_wrapper.h
template/cpp_template/second_party/grps-server-framework/include/monitor/: monitor.h
template/cpp_template/src/: CMakeLists.txt  customized_converter.cc  customized_converter.h  customized_inferer.cc  customized_inferer.h  grps_server_customized.cc  grps_server_customized.h  main.cc
template/py_template/: .gitignore  README.md  grps_framework-1.1.0-py3-none-any.whl  test.py
(+61 files in other folders)
